2010-11-19  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclInterp.c:  fix gcc warning: passing argument 3 of
	'Tcl_GetIndexFromObj' discards qualifiers from pointer target type
	* generic/tclWinInit.c: fix gcc warning: dereferencing pointer
	'oemId' does break strict-aliasing rules

2010-11-18  Donal K. Fellows  <dkf@users.sf.net>

	* doc/file.n: [Bug 3111298]: Typofix.

2010-11-16  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclPlatDecls.h: [Bug 3110161]: Extensions using TCHAR don't
	compile on VS2005 SP1

2010-11-15  Andreas Kupries  <andreask@activestate.com>

	* doc/interp.n: [Bug 3081184]: TIP #378 backport.
	* doc/tclvars.n: Performance fix for TIP #280.
	* generic/tclBasic.c:
	* generic/tclExecute.c:
	* generic/tclInt.h:
	* generic/tclInterp.c:
	* tests/info.test:
	* tests/interp.test:

2010-11-03  Kevin B. Kenny  <kennykb@acm.org>

	* generic/tclCompCmds.c (TclCompileCatchCmd):
	* tests/compile.test (compile-3.6): [Bug 3098302]: Reworked the
	compilation of the [catch] command so as to avoid placing any code
	that might throw an exception (specifically, any initial substitutions
	or any stores to result or options variables) between the BEGIN_CATCH
	and END_CATCH but outside the exception range.  Added a test case that
	panics on a stack smash if the change is not made.

2010-11-01  Stuart Cassoff  <stwo@users.sourceforge.net>

	* library/safe.tcl:	Improved handling of non-standard module
	* tests/safe.test:	path lists, empty path lists in particular.

2010-11-01  Kevin B. Kenny  <kennykb@acm.org>

	* library/tzdata/Asia/Hong_Kong:
	* library/tzdata/Pacific/Apia:
	* library/tzdata/Pacific/Fiji:   Olson's tzdata2010o.

2010-10-23  Jan Nijtmans  <nijtmans@users.sf.net>

	* tools/uniParse.tcl:   [Bug 3085863]: tclUniData 9 years old
	* tools/uniClass.tcl:   Upgrade everything to Unicode 6.0, except
	* tests/utf.test:       non-BMP characters > 0xFFFF
	* generic/tclUniData.c: (re-generated)
	* generic/regc_locale.c:(re-generated)